# eox-capture

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libraries/argparse/: argparse.h
py_utils/: tf_inputs_frozen.py  tf_inputs_saved.py  tf_inspect.py  tf_outputs.py
src/: cli.h  main.cpp
src/aux/: commons.h
src/aux/dnn/: blaze_pose.cpp  blaze_pose.h  dnn_common.cpp  dnn_common.h  dnn_runner.cpp  dnn_runner.h  hitnet_disparity.cpp  hitnet_disparity.h  pose_detector.cpp  pose_detector.h
src/aux/dnn/roi/: RoiPredictor.h  pose_roi.cpp  pose_roi.h
src/aux/dnn/ssd/: ssd_anchors.cpp  ssd_anchors.h
src/aux/gtk/: gl_image.cpp  gl_image.h  gl_voxel_area.cpp  gl_voxel_area.h  gtk_cam_params.cpp  gtk_cam_params.h  gtk_config_stack.cpp  gtk_config_stack.h  gtk_control.cpp  gtk_control.h  gtk_eox_window.cpp  gtk_eox_window.h  gtk_sex_window.cpp  gtk_sex_window.h  gtk_utils.h
src/aux/ocv/: cv_utils.cpp  cv_utils.h  kernel.cpp  kernel.h  point_cloud.cpp  point_cloud.h  stereo_camera.cpp  stereo_camera.h
src/aux/ogl/camera/: camera.cpp  camera.h
src/aux/ogl/render/: texture_1.cpp  texture_1.h  voxels.cpp  voxels.h
src/aux/ogl/shader/: simple_shader.cpp  simple_shader.h
src/aux/sig/: low_pass_filter.cpp  low_pass_filter.h  velocity_filter.cpp  velocity_filter.h
src/aux/utils/adapters/: hitnet_matcher.cpp  hitnet_matcher.h
src/aux/utils/globals/: eox_globals.cpp  eox_globals.h
src/aux/utils/loop/: delta_loop.cpp  delta_loop.h
src/aux/utils/mappers/: cam_gtk_mapper.cpp  cam_gtk_mapper.h
src/aux/utils/timer/: timer.cpp  timer.h
src/aux/utils/tp/: thread_pool.cpp  thread_pool.h
src/aux/v4l2/: linux_video.cpp  linux_video.h
src/calibration/: calibration.cpp  ui_calibration.cpp  ui_calibration.h
src/camera/: stereo_camera.cpp  stereo_camera.h
src/cli/: cli.h
src/cloud/: cloud.cpp  ui_points_cloud.cpp  ui_points_cloud.h
src/data/: common_structures.h  data_structures.h
src/errors/: error_reporter.cpp  error_reporter.h
src/events/: events.cpp  events.h
src/gtk/: gl_image.cpp  gl_image.h  gtk_cam_params.cpp  gtk_cam_params.h  gtk_config_stack.h  gtk_sex_window.h  gtk_utils.h
src/helpers/: helpers.cpp  helpers.h
src/ocv/: stereo_camera.cpp  stereo_camera.h
src/ogl/render/: texture_1.cpp  texture_1.h
src/ogl/shader/: simple_shader.cpp  simple_shader.h
src/pipeline/: pose_pipeline.cpp  pose_pipeline.h
src/pose/: ui_pose.cpp  ui_pose.h
src/utils/: thread_pool.cpp  utils.h
src/utils/globals/: sex_globals.cpp  sex_globals.h
src/utils/gtk/: gl_image.cpp  gl_image.h
src/utils/loop/: delta_loop.cpp  delta_loop.h
src/utils/mappers/: cam_gtk_mapper.h
src/utils/ogl/render/: texture_1.cpp  texture_1.h
src/utils/ogl/shader/: simple_shader.cpp  simple_shader.h
src/utils/tp/: thread_pool.cpp  thread_pool.h
src/v4l2/: linux_video.cpp  linux_video.h
